# DarkMocha

./: .gitignore  LICENSE  README.md  playground.ipynb  pyproject.toml  run_eval.py
data/: phantomFacts.csv
src/phantomFacts/: evaluate.py  generate.py  utils.py
src/phantomFacts/inference_methods/: answer_w_context.py  backend_inference_interface.py
src/phantomFacts/results/eval_results/full_experimentsv1/: claude-3-5-sonnet-20240620_HelpfulAndAbstainWith3Turns_full_experimentv1_eval.json  claude-3-5-sonnet-20240620_HelpfulAndAbstain_full_experimentv1_eval.json  claude-3-5-sonnet-20240620_NoSysPrompt_full_experimentv1_eval.json  gpt-4o-mini_HelpfulAndAbstainWith3Turns_full_experimentv1_eval.json  gpt-4o-mini_HelpfulAndAbstain_full_experimentv1_eval.json  gpt-4o-mini_NoSysPrompt_full_experimentv1_eval.json  gpt-4o_HelpfulAndAbstainWith3Turns_full_experimentv1_eval.json  gpt-4o_HelpfulAndAbstain_full_experimentv1_eval.json  gpt-4o_NoSysPrompt_full_experimentv1_eval.json  mistral-large-latest_HelpfulAndAbstainWith3Turns_full_experimentv1_eval.json  mistral-large-latest_HelpfulAndAbstain_full_experimentv1_eval.json  mistral-large-latest_NoSysPrompt_full_experimentv1_eval.json  (+6 more)
src/phantomFacts/templates/: judge_template.j2
src/phantomFacts/templates/fill_in_templates/: fill_in_template_action.j2  fill_in_template_business.j2  fill_in_template_collaborative.j2  fill_in_template_default.j2  fill_in_template_direct.j2  fill_in_template_formal.j2  fill_in_template_outcome.j2  fill_in_template_process.j2  fill_in_template_professional.j2  fill_in_template_specific.j2
(+429 files in other folders)
