[project]
name = "phantomFacts"
version = "0.1.0"
description = "PhantomFacts package"
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "datasets",
    "litellm",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy"
]

[project.optional-dependencies]
gpu = [
    "vllm",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
